name:                jmacro
version:             0.6.17
synopsis:            QuasiQuotation library for programmatic generation of JavaScript code.
description:         JavaScript syntax, functional syntax, hygienic names, compile-time guarantees of syntactic correctness, limited typechecking. Additional documentation available at <http://www.haskell.org/haskellwiki/Jmacro>
category:            Language
license:             BSD3
license-file:        LICENSE
author:              Gershom Bazerman
maintainer:          gershomb@gmail.com
Tested-With:         GHC == 8.6.3
Build-Type:          Simple
Cabal-Version:       >= 1.6

library
  build-depends:     base >= 4.9, base < 5, containers, wl-pprint-text, text, safe >= 0.2, parsec > 3.0, template-haskell >= 2.3, mtl > 1.1 , haskell-src-exts, haskell-src-meta, bytestring >= 0.9, syb, aeson >= 0.5 , regex-posix > 0.9, vector >= 0.8, unordered-containers >= 0.2

  exposed-modules:   Language.JavaScript.JMacro
                     Language.JavaScript.JMacro.Util
                     Language.JavaScript.JMacro.TypeCheck
                     Language.JavaScript.JMacro.Types
                     Language.JavaScript.JMacro.Prelude
  other-modules:     Language.JavaScript.JMacro.Base
                     Language.JavaScript.JMacro.QQ
                     Language.JavaScript.JMacro.ParseTH
  ghc-options:       -Wall

flag benchmarks
  description: Build the benchmarks
  default: False

executable jmacro
   build-depends:     base >= 4, base < 5, containers, wl-pprint-text, text, safe >= 0.2, parsec > 3.0, template-haskell >= 2.3, mtl > 1.1 , haskell-src-exts, haskell-src-meta, bytestring >= 0.9, syb, aeson >= 0.5 , regex-posix > 0.9, vector >= 0.8, unordered-containers >= 0.2, parseargs
   main-is: Language/JavaScript/JMacro/Executable.hs
   other-modules: Language.JavaScript.JMacro.Util
                   Language.JavaScript.JMacro.TypeCheck
                   Language.JavaScript.JMacro.Types
                   Language.JavaScript.JMacro.Prelude
                   Language.JavaScript.JMacro.Base
                   Language.JavaScript.JMacro.QQ
                   Language.JavaScript.JMacro.ParseTH
                   Language.JavaScript.JMacro


executable jmacro-bench
  main-is: Language/JavaScript/JMacro/Benchmark.hs
  if flag(benchmarks)
    buildable: True
    build-depends: criterion
    other-modules: Language.JavaScript.JMacro.Util
                   Language.JavaScript.JMacro.TypeCheck
                   Language.JavaScript.JMacro.Types
                   Language.JavaScript.JMacro.Prelude
                   Language.JavaScript.JMacro.Base
                   Language.JavaScript.JMacro.QQ
                   Language.JavaScript.JMacro.ParseTH
                   Language.JavaScript.JMacro

  else
    buildable: False

source-repository head
  type:      darcs
  location:  http://hub.darcs.net/gershomb/jmacro
